--- a/.github/workflows/fix-php-code-style.yml
+++ b/.github/workflows/fix-php-code-style.yml
@@ -1,4 +1,5 @@
-name: Fix PHP code style issues
+name: Fix PHP code style
+run-name: fix-code-style
 
 on:
   push:
@@ -24,4 +25,4 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: Fix styling
+          commit_message: "fix: style issues"
