--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -33,4 +33,4 @@ jobs:
         run: composer install --no-progress --no-interaction --prefer-dist
 
       - name: Execute tests
-        run: vendor/bin/pest --ci
+        run: vendor/bin/pest
