--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows, macos]
+        os: [ubuntu-latest]
         php: [8.1, 8.2]
         stability: [prefer-lowest, prefer-stable]
     runs-on: ${{ matrix.os }}
