--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,10 +13,9 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         php: [8.1, 8.2]
-        stability: [prefer-lowest, prefer-stable]
     runs-on: ${{ matrix.os }}
 
-    name: Running Laravel [${{ matrix.laravel }} - ${{ matrix.stability }}] with PHP [${{ matrix.php }}] on OS [${{ matrix.os }}]
+    name: Running Package tests with PHP [${{ matrix.php }}] on OS [${{ matrix.os }}]
 
     steps:
       - name: Checkout code
