--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,15 +8,14 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.2, 8.1]
-        stability: [prefer-lowest, prefer-stable]
+        php: [8.1, 8.2]
+    runs-on: ${{ matrix.os }}
 
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
+    name: Running Package tests with PHP [${{ matrix.php }}] on OS [${{ matrix.os }}]
 
     steps:
       - name: Checkout code
@@ -29,17 +28,8 @@ jobs:
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
           coverage: none
 
-      - name: Setup problem matchers
-        run: |
-          echo "::add-matcher::${{ runner.tool_cache }}/php.json"
-          echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
-
       - name: Install dependencies
-        run: |
-          composer install --no-interaction --prefer-dist
-
-      - name: List Installed Dependencies
-        run: composer show -D
+        run: composer install --no-progress --no-interaction --prefer-dist
 
       - name: Execute tests
         run: vendor/bin/pest --ci
